truncate url on small screens (fix #16)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -74,6 +74,10 @@ footer {
     position: absolute;
     top: 8px;
     left: 40px;
+    width: calc(100% - 80px);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #endpoint-url span.fa {
